deploy/overlays/prod/app-resource-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: corvus-app
spec:
  replicas: 5
  template:
    spec:
      containers:
        - name: app
          resources:
            requests:
              cpu: "500m"
              memory: "1Gi"
              ephemeral-storage: "256Mi"
            limits:
              cpu: "2"
              memory: "2Gi"
              ephemeral-storage: "512Mi"
